Small UI fixes and improvements  (#657)
* Switch to global .dropdown-selected for better Night Mode support

* Switch more Bootstrap variables over to CSS variables

* Upgrade to Bootstrap 4.0.0b3

* Fix content shifting when no-scroll is active

* Fix React key warning

* Make gray-lightest on night mode darker

* Remove unnecessary background color on navtabs in md and above

* Add workaround for Bootstrap 4 issue

* Hide export options when offline

* Add counter class used when natural indices are not available

* Fix dropdown-menu z-index

* Improve @night-mode-only mixin

* Add extra padding to .dropdown-item on touchscreens

* Refactor vertical mode styles using new mixin

* Move some shadows into CSS variables

* Nest blocks using parent reference selector

* No more Scrollspy warning!

* Refine error page

* Extract horizontal dropdown-item padding on touch to variable

--- a/www/src/js/views/layout/GlobalSearch.scss
+++ b/www/src/js/views/layout/GlobalSearch.scss
@@ -179,38 +179,12 @@ $icon-dist-lg: $input-width-open-lg - $input-width;
   color: var(--body-color);
 }
 
-.sem1 {
-  background: darken($gray-lightest, 5%);
-}
+@each $semester in (1, 2, 3, 4) {
+  .sem#{$semester} {
+    background: darken($gray-lightest, 5% * $semester);
 
-.sem2 {
-  background: darken($gray-lightest, 10%);
-}
-
-.sem3 {
-  background: darken($gray-lightest, 15%);
-}
-
-.sem4 {
-  background: darken($gray-lightest, 20%);
-}
-
-@include night-mode-only {
-  $dark-bg: #2c2c2c;
-
-  .sem1 {
-    background: lighten($dark-bg, 5%);
-  }
-
-  .sem2 {
-    background: lighten($dark-bg, 10%);
-  }
-
-  .sem3 {
-    background: lighten($dark-bg, 15%);
-  }
-
-  .sem4 {
-    background: lighten($dark-bg, 20%);
+    @include night-mode {
+      background: lighten(#2c2c2c, 5% * $semester);
+    }
   }
 }
