--- a/www/src/js/views/timetable/TimetableDay.scss
+++ b/www/src/js/views/timetable/TimetableDay.scss
@@ -20,15 +20,15 @@
       border-bottom-left-radius: $btn-border-radius;
     }
   }
-}
 
-:global(.verticalMode) .day {
-  flex-direction: column;
-  border-bottom: 0;
-  border-left: $timetable-border;
+  @include vertical-mode {
+    flex-direction: column;
+    border-bottom: 0;
+    border-left: $timetable-border;
 
-  &:first-child {
-    border-left: 0;
+    &:first-child {
+      border-left: 0;
+    }
   }
 }
 
@@ -59,16 +59,16 @@
       word-break: break-all;
     }
   }
-}
 
-:global(.verticalMode) .dayName {
-  z-index: auto; // Reset z-index to prevent modules from clipping header
-  flex: 0 0 $timetable-day-v-size;
-  border: 0;
+  @include vertical-mode {
+    z-index: auto; // Reset z-index to prevent modules from clipping header
+    flex: 0 0 $timetable-day-v-size;
+    border: 0;
 
-  .dayNameText {
-    width: auto;
-    writing-mode: horizontal-tb;
+    .dayNameText {
+      width: auto;
+      writing-mode: horizontal-tb;
+    }
   }
 }
 
@@ -80,12 +80,12 @@
   min-height: $timetable-row-height;
   padding-bottom: 0.3rem;
   background: linear-gradient(to right, var(--gray-lightest) 50%, transparent 50%);
-}
 
-:global(.verticalMode) .dayRows {
-  flex-direction: row;
-  padding: 0 0.1rem 0 0;
-  background: linear-gradient(to bottom, var(--gray-lightest) 50%, transparent 50%);
+  @include vertical-mode {
+    flex-direction: row;
+    padding: 0 0.1rem 0 0;
+    background: linear-gradient(to bottom, var(--gray-lightest) 50%, transparent 50%);
+  }
 }
 
 .currentDay {
