--- a/www/src/styles/constants.scss
+++ b/www/src/styles/constants.scss
@@ -6,6 +6,7 @@ $navtab-height: 3rem;
 
 $navtab-shadow-height: 0.8rem;
 $navtab-shadow-color: rgba(#000, 0.1);
+$navtab-shadow-color-night: rgba(#000, 0.7);
 
 // Type
 $sm-font-size-ratio: 0.875;
@@ -166,6 +167,7 @@ $module-finder-search-z-index-sm: 950;
 $navtabs-z-index: 900;
 $navbar-z-index: 890;
 $module-finder-search-z-index-md: 850;
+$zindex-dropdown: 820; // Bootstrap override
 $fab-z-index: 800;
 $side-menu-z-index: 700;
 $side-menu-overlay-z-index: 690;
