--- a/www/src/styles/pages/module-finder.scss
+++ b/www/src/styles/pages/module-finder.scss
@@ -52,7 +52,6 @@
       font-size: $font-size-xs;
       border-width: 0 0 0.1rem;
       border-radius: 0;
-      cursor: pointer;
 
       &:last-child {
         margin-right: 0;
